# reachy-dj

./: .gitattributes  .gitignore  README.md  index.html  pyproject.toml
docs/plans/: 2026-05-09-dance-party-app-design.md  2026-05-09-dance-party-app.md
reachy_mini_dance_party_app/: __init__.py  dj.py  main.py  moves.py  settings_server.py
reachy_mini_dance_party_app/_numba_cache_linux_aarch64_py312/librosa/_pycache/: beat.__beat_track_dp-558.py312.1.nbc  beat.__beat_track_dp-558.py312.2.nbc  (+22 more)
reachy_mini_dance_party_app/dance/: __init__.py  library_dancer.py  picker.py
reachy_mini_dance_party_app/music/: __init__.py  analysis.py  beat.py  mixer.py  playback.py  youtube.py
reachy_mini_dance_party_app/prompts/: __init__.py  system.md
reachy_mini_dance_party_app/tools/: __init__.py  look_at.py  look_at_audience.py  move_head.py  play_emotion.py  play_song.py  registry.py  set_face_tracking.py  set_volume.py  skip_song.py  stop_dance.py  stop_party.py  take_photo.py
reachy_mini_dance_party_app/vision/: __init__.py  audience.py  camera_worker.py  face_tracker.py
reachy_mini_dance_party_app/voice/: __init__.py  openai_realtime.py
scripts/: deploy.sh
tests/: conftest.py
tests/integration/: test_app_startup.py  test_moves_smoke.py  test_playback_real.py  test_vision_smoke.py  test_youtube_real.py
tests/unit/: test_analysis.py  test_audience.py  test_beat_grid.py  test_dj.py  test_library_dancer.py  test_mixer.py  test_picker.py  test_playback.py  test_playback_with_mixer.py  test_realtime_loop.py  test_tools.py  test_youtube.py
(+52 files in other folders)
